# product-profunctors

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  TODO.md  default.nix  product-profunctors.cabal  shell.nix
.github/workflows/: ci.yml
Bench/: Main.hs
Data/Profunctor/: Product.hs
Data/Profunctor/Product/: Adaptor.hs  Class.hs  Default.hs  Examples.hs  Flatten.hs  Newtype.hs  TH.hs  Tuples.hs
Data/Profunctor/Product/Default/: Class.hs
Data/Profunctor/Product/Internal/: Adaptor.hs  TH.hs
Data/Profunctor/Product/Tuples/: TH.hs
Test/: CheckTypes.hs  Definitions.hs  DefinitionsUndecidable.hs  Main.hs
