name:     product-profunctors
version:  0.5
synopsis: product-profunctors
author:   Purely Agile
build-type: Simple
cabal-version: >= 1.2
License:      OtherLicense
License-File: LICENSE
Description: Product profunctors

library
  build-depends:   base >= 4 && < 5, profunctors >= 4.0 && < 4.3,
                   contravariant >= 0.4 && < 1.3,
                   template-haskell
  exposed-modules: Data.Profunctor.Product,
                   Data.Profunctor.Product.Default,
                   Data.Profunctor.Product.Flatten,
                   Data.Profunctor.Product.TH,
                   Data.Profunctor.Product.Tuples
  ghc-options:     -Wall
